--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,39 +9,49 @@
     body { margin: 0; }
     canvas { display: block; }
   </style>
+  <title>3D Model Viewer</title>
 </head>
 <body>
   <div id="model-container" style="width: 100%; height: 600px;"></div>
 
   <script>
+    // Setup Scene, Camera, Renderer
     var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
     var renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+    document.getElementById('model-container').appendChild(renderer.domElement);
 
+    // Load the GLB model
     var loader = new THREE.GLTFLoader();
-    loader.load('path/to/your/model.gltf', function(gltf) {
+    loader.load('cmon bro.glb', function(gltf) {
       var model = gltf.scene;
       scene.add(model);
 
+      // Position and scale the model
       model.position.set(0, 0, 0);
       model.scale.set(1, 1, 1);
 
+      // Rotation animation
       var animate = function() {
         requestAnimationFrame(animate);
-        model.rotation.y += 0.01;
+        model.rotation.y += 0.01; // Adjust rotation speed here
         renderer.render(scene, camera);
       };
       animate();
+    }, undefined, function(error) {
+      console.error('An error occurred loading the model: ', error);
     });
 
+    // Add Lighting to the Scene
     var light = new THREE.DirectionalLight(0xffffff, 1);
     light.position.set(5, 5, 5).normalize();
     scene.add(light);
 
+    // Set Camera Position
     camera.position.z = 5;
 
+    // Resize the canvas on window resize
     window.addEventListener('resize', function() {
       var width = window.innerWidth;
       var height = window.innerHeight;
