--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       animate();
     });
 
-    // Add lighting
-    var ambientLight = new THREE.AmbientLight(0x404040, 2);
+    // Adjust lighting to make the model brighter
+    var ambientLight = new THREE.AmbientLight(0xffffff, 2.5);  // Brighter ambient light
     scene.add(ambientLight);
 
-    var directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+    var directionalLight = new THREE.DirectionalLight(0xffffff, 2);  // Increased directional light intensity
     directionalLight.position.set(5, 5, 5).normalize();
     scene.add(directionalLight);
 
