--- a/index.html
+++ b/index.html
@@ -3,79 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-  <style>
-    body { margin: 0; height: 2000px; }  /* Height extended to test scrolling */
-    canvas { display: block; }
-  </style>
-  <title>3D Model Viewer</title>
+  <title>Your Brand Name</title>
+  
+  <!-- Link to CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- AOS (Animate on Scroll) for scroll animations -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- Google Fonts for Typography -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="model-container" style="width: 100%; height: 600px;"></div>
 
+  <!-- Fullscreen Hero Section -->
+  <section class="hero" data-aos="fade-up">
+    <div class="content">
+      <h1>Your Business Tagline</h1>
+      <p>Welcome to our amazing brand.</p>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section class="about" data-aos="fade-right">
+    <div class="content">
+      <h2>About Us</h2>
+      <p>We provide top-notch services to our clients.</p>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section class="services" data-aos="fade-left">
+    <div class="content">
+      <h2>Our Services</h2>
+      <p>Discover what we offer.</p>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact" data-aos="fade-up">
+    <div class="content">
+      <h2>Contact Us</h2>
+      <p>Let's work together! Reach out to us at contact@yourbrand.com.</p>
+    </div>
+  </section>
+
+  <!-- AOS Script for animations -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    // Setup Scene, Camera, Renderer
-    var scene = new THREE.Scene();
-    var camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-    var renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setPixelRatio(window.devicePixelRatio);
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setClearColor(0xE1E0E5);  // Set background color to #E1E0E5
-    document.getElementById('model-container').appendChild(renderer.domElement);
-
-    // Load the GLB model
-    var loader = new THREE.GLTFLoader();
-    var model;
-    loader.load('cmon bro.glb', function(gltf) {
-      model = gltf.scene;
-      scene.add(model);
-
-      // Initial position and scale
-      model.position.set(0, 0, 0);
-      model.scale.set(1, 1, 1);
-
-      var animate = function() {
-        requestAnimationFrame(animate);
-        model.rotation.y += 0.005;  // Slow rotation
-        renderer.render(scene, camera);
-      };
-      animate();
-    });
-
-    // Adjust lighting to make the model brighter
-    var ambientLight = new THREE.AmbientLight(0xffffff, 2.5);  // Brighter ambient light
-    scene.add(ambientLight);
-
-    var directionalLight = new THREE.DirectionalLight(0xffffff, 2);  // Increased directional light intensity
-    directionalLight.position.set(5, 5, 5).normalize();
-    scene.add(directionalLight);
-
-    // Set camera position
-    camera.position.z = 5;
-
-    // Adjust canvas on window resize
-    window.addEventListener('resize', function() {
-      var width = window.innerWidth;
-      var height = window.innerHeight;
-      renderer.setSize(width, height);
-      camera.aspect = width / height;
-      camera.updateProjectionMatrix();
-    });
-
-    // Scroll event listener to move and scale the model
-    window.onscroll = function() {
-      if (model) {
-        var scrollY = window.scrollY || window.pageYOffset;  // Get scroll position
-
-        // Scale the model as you scroll (scale increases with scroll)
-        var scaleFactor = 1 + scrollY / 1000;  // Adjust this factor to control the scaling speed
-        model.scale.set(scaleFactor, scaleFactor, scaleFactor);
-
-        // Move the model along the Y-axis as you scroll
-        model.position.y = scrollY / 100;  // Adjust this value to control movement speed
-      }
-    };
+    AOS.init();
   </script>
+
+  <!-- Link to JavaScript for scroll effects -->
+  <script src="script.js"></script>
 </body>
 </html>
