--- a/index.html
+++ b/index.html
@@ -13,8 +13,44 @@
 
   <!-- Google Fonts for Typography -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
+  <style>
+    /* Additional styles for the scrolling text */
+    .scrolling-text {
+      position: absolute;
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      top: 10%;
+      transform: translateY(-50%);
+      color: white;
+      font-size: 2rem;
+      font-weight: 600;
+      text-align: center;
+    }
+
+    .scrolling-text span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 10s linear infinite;
+    }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+  </style>
 </head>
 <body>
+
+  <!-- Scrolling text -->
+  <div class="scrolling-text">
+    <span>Blurring the lines between reality and technology</span>
+  </div>
 
   <!-- Fullscreen Hero Section -->
   <section class="hero" data-aos="fade-up">
