--- a/index.html
+++ b/index.html
@@ -1,96 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Brand Name</title>
-  
-  <!-- Link to CSS -->
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Spline Design</title>
+    <style>
+        /* Ensure full height and width of the page */
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+            overflow: visible; /* Make sure overflow is not hidden */
+        }
 
-  <!-- AOS (Animate on Scroll) for scroll animations -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-  <!-- Google Fonts for Typography -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  
-  <style>
-    /* Additional styles for the scrolling text */
-    .scrolling-text {
-      position: absolute;
-      width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      top: 10%;
-      transform: translateY(-50%);
-      color: white;
-      font-size: 2rem;
-      font-weight: 600;
-      text-align: center;
-    }
-
-    .scrolling-text span {
-      display: inline-block;
-      padding-left: 100%;
-      animation: scroll 10s linear infinite;
-    }
-
-    @keyframes scroll {
-      0% {
-        transform: translateX(100%);
-      }
-      100% {
-        transform: translateX(-100%);
-      }
-    }
-  </style>
+        /* Style the spline-viewer to take up full screen */
+        spline-viewer {
+            width: 100vw;
+            height: 100vh;
+            display: block;
+            overflow: visible; /* Ensure content isn't clipped */
+        }
+    </style>
 </head>
 <body>
 
-  <!-- Scrolling text -->
-  <div class="scrolling-text">
-    <span>Blurring the lines between reality and technology</span>
-  </div>
+    <!-- Embed the Spline Viewer here -->
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.25/build/spline-viewer.js"></script>
+    <spline-viewer url="https://prod.spline.design/riyyfXMmVHyRMgdR/scene.splinecode"></spline-viewer>
 
-  <!-- Fullscreen Hero Section -->
-  <section class="hero" data-aos="fade-up">
-    <div class="content">
-      <h1>Your Business Tagline</h1>
-      <p>Welcome to our amazing brand.</p>
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section class="about" data-aos="fade-right">
-    <div class="content">
-      <h2>About Us</h2>
-      <p>We provide top-notch services to our clients.</p>
-    </div>
-  </section>
-
-  <!-- Services Section -->
-  <section class="services" data-aos="fade-left">
-    <div class="content">
-      <h2>Our Services</h2>
-      <p>Discover what we offer.</p>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="contact" data-aos="fade-up">
-    <div class="content">
-      <h2>Contact Us</h2>
-      <p>Let's work together! Reach out to us at contact@yourbrand.com.</p>
-    </div>
-  </section>
-
-  <!-- AOS Script for animations -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
-
-  <!-- Link to JavaScript for scroll effects -->
-  <script src="script.js"></script>
 </body>
 </html>
