--- a/index.html
+++ b/index.html
@@ -12,32 +12,33 @@
             padding: 0;
             width: 100vw;
             height: 100vh;
-            overflow: visible;
+            overflow: hidden; /* This is important to ensure scrolling behavior works only in the wrapper */
+        }
+
+        /* Wrapper around the Spline viewer */
+        .spline-wrapper {
+            width: 100vw;
+            height: 100vh;
+            overflow: auto; /* Enable scrolling within the wrapper */
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling on mobile */
         }
 
         /* Style the spline-viewer to take up full screen */
         spline-viewer {
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             display: block;
-            overflow: visible;
-            touch-action: pan-y; /* Ensure vertical scroll works on touch */
         }
 
-        @media only screen and (max-width: 600px) {
-            spline-viewer {
-                height: 100%; /* Adjust height for mobile screens */
-                overflow-y: auto; /* Ensure vertical scroll on mobile */
-                touch-action: pan-y; /* Ensure vertical scroll works on touch */
-            }
-        }
     </style>
 </head>
 <body>
 
-    <!-- Embed the Spline Viewer here -->
-    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.25/build/spline-viewer.js"></script>
-    <spline-viewer url="https://prod.spline.design/riyyfXMmVHyRMgdR/scene.splinecode"></spline-viewer>
+    <!-- Wrapper around the Spline Viewer -->
+    <div class="spline-wrapper">
+        <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.25/build/spline-viewer.js"></script>
+        <spline-viewer url="https://prod.spline.design/riyyfXMmVHyRMgdR/scene.splinecode"></spline-viewer>
+    </div>
 
 </body>
 </html>
